<resources>

    <string name="app_name">MDO NIBT</string>

<!--Tela Login-->
    <string name="text_cadastro">Ou se cadastre clicando aqui</string>
    <string name="entrar">Entrar</string>

<!--Formulários_Hint-->
    <string name="senha_hint">Senha</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="nome_hint">nome</string>
    <string name="ministerio_hint">Ministério</string>
    <string name="telefone_hint">Telefone</string>
    <string name="confirmar_senha_hint">Confirme a sua senha</string>
    <string name="nome_do_lider_de_ga_completo">Nome do líder de GA (completo)</string>

<!--Tela Cadastro-->
    <string name="title_cadastro">Cadastro</string>
    <string name="bt_cadastrar">Cadastrar</string>
    <string name="texto_sw_ga_ministerio">A app vai ser usado no GA?</string>

<!--Tela Principal-->
    <string name="sair">Sair</string>
    <string name="btn_ver_hist_rico">+ Ver Histórico +</string>
    <string name="btn_cadastrar_mdo">+ Cadastrar MDO +</string>

<!--Tela Histórico-->
    <string name="titulo_historico">Histórico</string>

<!--Tela MDO-->
    <string name="title_mdo">MDO</string>
    <string name="bnt_salvar_mdo">+ Salvar MDO +</string>
    <string name="btn_voltar">Voltar</string>
    <string name="meditacao_hin">med</string>
    <string name="decoracao_hint">dec</string>
    <string name="oracao_hint">ora</string>
    <string name="bt_enviar">Enviar</string>

<!--Nomes de Contas-->
    <string name="nome_vareta">+ Vareta +</string>
    <string name="nome_bastao">+ Bastão +</string>
    <string name="nome_barbante">+ Barbante +</string>

<!--    Exclusividade-->
    <string name="text_exclusividade">App Exclusivo A.T</string>

</resources>