<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPrincipal"
    android:background="@drawable/backgound">

    <View
        android:id="@+id/containerUser"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/container_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_igrj"
        app:layout_constraintStart_toStartOf="@id/containerUser"
        app:layout_constraintEnd_toEndOf="@id/containerUser"
        app:layout_constraintTop_toTopOf="@id/containerUser"
        app:layout_constraintBottom_toBottomOf="@id/containerUser"
        />

    <ImageView
        android:id="@+id/iconeUser"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerUser"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/text_nome_usuario_telaprincipal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:includeFontPadding="false"
        app:layout_constraintStart_toEndOf="@id/iconeUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iconeUser"
        app:layout_constraintBottom_toBottomOf="@id/iconeUser"
        android:layout_marginStart="10dp" />

    <ImageView
        android:id="@+id/iconeEmail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconeUser"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/text_email_usuario_telaprincipal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:includeFontPadding="false"
        app:layout_constraintStart_toEndOf="@id/iconeEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iconeEmail"
        app:layout_constraintBottom_toBottomOf="@id/iconeEmail"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/btn_avancar_mdo_telaprincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_email_usuario_telaprincipal"
        android:background="@drawable/black_circle_button"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/btn_cadastrar_mdo"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btn_ver_historico_telaprincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_circle_button"
        android:padding="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_ver_hist_rico"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/btn_avancar_mdo_telaprincipal"
        app:layout_constraintEnd_toEndOf="@id/btn_avancar_mdo_telaprincipal"
        app:layout_constraintTop_toBottomOf="@id/btn_avancar_mdo_telaprincipal"
        />

    <!-- BLOCO DE NOTAS (com menos distância do botão de histórico) -->
    <EditText
        android:id="@+id/anotacoes"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:hint="Anotações..."
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:background="@drawable/bg_note"
        app:layout_constraintTop_toBottomOf="@id/btn_ver_historico_telaprincipal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_limpar_notas"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp" />
    <!-- BOTÃO LIMPAR NOTAS (esquerda) -->
    <Button
        android:id="@+id/btn_limpar_notas"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="Limpar"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/black_circle_button"
        app:layout_constraintTop_toBottomOf="@id/anotacoes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_salvar_notas"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_weight="1" />

    <!-- BOTÃO SALVAR NOTAS (direita) -->
    <Button
        android:id="@+id/btn_salvar_notas"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="Salvar"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/black_circle_button"
        app:layout_constraintTop_toBottomOf="@id/anotacoes"
        app:layout_constraintStart_toEndOf="@id/btn_limpar_notas"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_weight="1" />
    <!--    <TextView-->
<!--        android:id="@+id/text_ranking"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="#00FF0000"-->
<!--        android:text="&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;Ranking dos campeões&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_marginTop="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/btn_ver_historico_telaprincipal"-->
<!--        />-->
<!--    <TextView-->
<!--        android:id="@+id/text_primeiro"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="#00FF0000"-->
<!--        android:text=""-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_marginTop="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/text_ranking"-->
<!--        />-->
<!--    <TextView-->
<!--        android:id="@+id/text_segundo"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="#00FF0000"-->
<!--        android:text=""-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_marginTop="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/text_primeiro"-->
<!--        />-->
<!--    <TextView-->
<!--        android:id="@+id/text_terceiro"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="#00FF0000"-->
<!--        android:text=""-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_marginTop="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/text_segundo"-->
<!--        />-->

    <Button
        android:id="@+id/btn_deslogar_telaprincipal"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@drawable/black_circle_button"
        android:text="@string/sair"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ImageView-->
<!--        android:id="@+id/ic_tools"-->
<!--        android:layout_width="60dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_margin="20dp"-->
<!--        android:src="@drawable/ic_tools"-->
<!--        android:layout_marginStart="20dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        />-->

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>